Fix page selectors' layout when flex wrap needed

--- a/src/styles/GameHistory.css
+++ b/src/styles/GameHistory.css
@@ -1,6 +1,12 @@
+.game-history-page-container{
+    width: min-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+
 .game-history{
     flex: 1;
-    height: 43rem;
 
     display: flex;
 
@@ -15,16 +21,18 @@
     padding-top: 0.5rem;
     display: flex;
     gap: 0.5rem;
-    justify-content: flex-end;
+
+    justify-content: center;
+
+    flex-wrap: wrap;
 }
 
 .page-selector{
-    width: 45px;
-    height: 6px;
-
     border: none;
 
     background-color: inherit;
+}
 
-    background-image: url(../assets/page-selector.png);
+.page-selector:hover{
+    cursor: pointer;
 }
